[package]
name = "pikacli"
version = "0.1.0"
authors = ["manishsingh10895 <manishsingh10895@gmail.com>"]
edition = "2018"
description = "simple cli for pika pika"
readme="README.md"
repository="https://github.com/manishsingh10895/rust-cli-pika"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.17"
colored = "2.0.0"
failure = "0.1.8"
exitfailure = "0.5.1"
assert_cmd = "1.0.1"
predicates = "1.0.5"